Commit HDMTI atualizado

--- a/index.html
+++ b/index.html
@@ -211,10 +211,9 @@
 <section class="partners-section">
   <div class="partners-header">
     <h3>Nossas principais parcerias</h3>
-    <h2>Alinhados com os maiores players</h2>
+    <h2>Conectados com os Líderes do Mercado</h2>
     <p>
-      Especializamos nossas equipes para estarem alinhadas com o melhor conhecimento disponível no mercado, 
-      o que envolve dominar os principais players de TI no mundo.
+      Nossas equipes são treinadas e capacitadas para estar sempre à frente, colaborando com os maiores players de TI globais. Essa parceria estratégica garante que entregamos soluções inovadoras e alinhadas às melhores práticas do setor.
     </p>
   </div>
   <div class="partners-logos">
