Atualização site HDMTI

--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
   </header>
 
 
+  <section class="video-section">
+    <div class="video-container">
+        <video class="responsive-video" autoplay muted loop>
+            <source src="./assets/video.mp4" type="video/mp4">
+            Seu navegador não suporta o elemento de vídeo.
+        </video>
+    </div>
+</section>
+
+
+
+
   <section class="services-section">
     <div class="container">
         <div class="services-content">
@@ -116,7 +128,7 @@
   
       
 <section class="carousel-section">
-  <p>Resultados que fazem a diferença com a HDMTI</p>
+
   <h2 class="client-h2">Clientes que escolhem excelência</h2>
   <div class="carousel-container">
       <div class="carousel" id="carousel">
@@ -230,7 +242,10 @@
       <img src="./assets/logo-eset.png" alt="Oracle">
     </div>
     <div class="partner-logo">
-      <img src="salesforce-logo.png" alt="Salesforce">
+      <img src="./assets/logo-aws.png" alt="Salesforce">
+    </div>
+    <div class="partner-logo">
+      <img src="./assets/logo-safetica.png" alt="Salesforce">
     </div>
   </div>
 </section>
