--- a/index.html
+++ b/index.html
@@ -31,19 +31,7 @@
       </div>
     </nav>
 
-    <div class="menu-container" id="menuToggle">
-      
-      <svg class="menu-icon" id="menuIcon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor">
-        <path fill-rule="evenodd" d="M4 5h16a1 1 0 010 2H4a1 1 0 010-2zm0 6h16a1 1 0 010 2H4a1 1 0 010-2zm0 6h16a1 1 0 010 2H4a1 1 0 010-2z" clip-rule="evenodd"/>
-      </svg>
-     
-      <div class="dropdown" id="dropdownMenu">
-        <a href="#servicos">Serviços</a>
-        <a href="#quemsomos">Quem somos</a>
-        <a href="#clientes">Clientes</a>
-        <a href="#parceiros">Parceiros</a>
-      </div>
-    </div>
+   
 
 
 
@@ -284,7 +272,15 @@
       </form>
     </div>
     <div class="contact-map">
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.479170416302!2d-46.66056128502255!3d-23.55317938469386!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59b3b0b915a7%3A0x3e6b267e6be240b2!2sAv.%20Paulista%2C%20159%20-%20Bela%20Vista%2C%20São%20Paulo%20-%20SP!5e0!3m2!1spt-BR!2sbr!4v1632505957754!5m2!1spt-BR!2sbr" width="100%" height="400" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+      <iframe 
+  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3656.5478072879394!2d-46.65578918502264!3d-23.550806684694473!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c9990c5463%3A0x4f4e5f3dcef97b9b!2sAv.%20Paulista%2C%201636%20-%20Sala%201504%20-%20Bela%20Vista%2C%20São%20Paulo%20-%20SP%2C%2001310-200!5e0!3m2!1spt-BR!2sbr!4v1708550000000!5m2!1spt-BR!2sbr" 
+  width="100%" 
+  height="400" 
+  style="border:0;" 
+  allowfullscreen="" 
+  loading="lazy">
+</iframe>
+
     </div>
   </div>
 </section>
