--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           </video>
       </div>
       <div class="video-content">
-          <h1>O que o poder da informação pode <br> fazer pelo seu negócio ?</h1>
+          <h1 class="h1-header">O que o poder da informação pode <br> fazer pelo seu negócio ?</h1>
           <p></p>
       </div>
   </div>
@@ -218,9 +218,7 @@
   <div class="partners-header">
    
     <h2>Parceiros tecnológicos</h2>
-    <p>
-      Nossas equipes são treinadas e capacitadas para estar sempre à frente, colaborando com os maiores players de TI globais. Essa parceria estratégica garante que entregamos soluções inovadoras e alinhadas às melhores práticas do setor.
-    </p>
+    
   </div>
   <div class="partners-logos">
     <div class="partner-logo">
