Commit Final Site HDMTI

--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
         <li><a href="#parceiros">Parceiros</a></li>
       </ul>
       <div class="buttons">
+        <a href="#contato">
         <button class="btn-contato">Contato</button>
-        
+      </a>
       </div>
     </nav>
 
@@ -245,7 +246,7 @@
 
 
 
-<section class="contact-section">
+<section class="contact-section" id="contato">
   <div class="contact-container">
     <div class="contact-form">
       <h2>Deixe sua mensagem e <span>vamos entrar em contato com você!</span></h2>
