--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <link rel="stylesheet" href="./resp/global.css">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet">
-  <link rel="shortcut icon" href="./assets/icohdmti.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/logohdmti.png" type="image/x-icon">
   
   
 </head>
